# solarmark-aauthcogs

./: MANIFEST.in  README.md  setup.cfg
solarmark-aauthcog/: apps.py  auth_hooks.py
solarmark-aauthcog/cogs/: thread.py
solarmark_aauthcogs/: __init__.py  apps.py  auth_hooks.py
solarmark_aauthcogs/cogs/: __init__.py  recruit.py  thread.py
